--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
     "@ai-sdk/anthropic": "^1.1.0",
     "@ai-sdk/google": "^1.1.0",
     "@ai-sdk/openai": "^1.1.0",
+    "@hono/node-server": "^1.19.9",
     "ai": "^4.1.0",
     "commander": "^12.0.0",
     "hono": "^4.0.0",
     "zod": "^3.23.0"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
+    "@types/node": "^20.19.33",
     "typescript": "^5.0.0"
   }
 }
