--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-gateway",
+  "name": "@hushhenry/ai-gateway",
   "version": "1.0.0",
   "description": "A TypeScript AI proxy supporting CLI and Library modes, built with Vercel AI SDK and pi-mono TUI/OAuth logic.",
   "main": "dist/index.js",
