--- a/package.json
+++ b/package.json
@@ -31,13 +31,18 @@
     "@ai-sdk/google": "^1.1.0",
     "@ai-sdk/openai": "^1.1.0",
     "@hono/node-server": "^1.19.9",
+    "@types/react": "^19.2.14",
     "ai": "^4.1.0",
     "commander": "^12.0.0",
     "hono": "^4.0.0",
+    "ink": "^6.7.0",
+    "lucide-react": "^0.564.0",
+    "react": "^19.2.4",
     "zod": "^3.23.0"
   },
   "devDependencies": {
     "@types/node": "^20.19.33",
+    "@types/react-dom": "^19.2.3",
     "typescript": "^5.0.0"
   }
 }
