--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@hushhenry/ai-gateway",
-  "version": "1.0.1-alpha.1",
+  "version": "1.0.1-alpha.2",
+  "type": "module",
   "description": "A TypeScript AI proxy supporting CLI and Library modes, built with Vercel AI SDK and pi-mono TUI/OAuth logic.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
