--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hushhenry/ai-gateway",
-  "version": "1.0.1-alpha.14",
+  "version": "1.0.1-alpha.17",
   "type": "module",
   "description": "A TypeScript AI proxy supporting CLI and Library modes, built with Vercel AI SDK and pi-mono TUI/OAuth logic.",
   "main": "dist/index.js",
@@ -39,6 +39,7 @@
     "ink": "^6.7.0",
     "ink-link": "^5.0.0",
     "lucide-react": "^0.564.0",
+    "open": "^10.1.2",
     "react": "^19.2.4",
     "terminal-link": "^5.0.0",
     "zod": "^3.23.0"
