--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
   "author": "hushhenry",
   "license": "MIT",
   "dependencies": {
+    "@ai-sdk/amazon-bedrock": "^4.0.60",
     "@ai-sdk/anthropic": "^1.1.0",
+    "@ai-sdk/azure": "^3.0.30",
     "@ai-sdk/google": "^1.1.0",
+    "@ai-sdk/google-vertex": "^4.0.58",
     "@ai-sdk/openai": "^1.1.0",
     "@hono/node-server": "^1.19.9",
     "@types/react": "^19.2.14",
